# swing-wellknown

./: .editorconfig  .gitconfig  .gitignore  AUTHORS  CITATION.cff  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  deploy_docs.yml  pypi-publish.yml
demo/: README.md  manage.py  requirements.txt  settings.py
demo/demo/: __init__.py  settings.py  urls.py  wsgi.py
docs/: CNAME  robots.txt  security.txt
docs/assets/style/: extra.css
docs/overrides/: _main.html
src/swing-text/: README.md  apps.py
src/swing-text/data/: _brand.json  _meta.json
src/swing-text/helpers/: helper_json.py
src/swing-text/layouts/: business.txt.jinja  contact.ldif.jinja  hackers.txt.jinja  license.txt.jinja  security.txt.jinja  trust.txt.jinja
src/swing-text/templates/: _manifest.webmanifest  ads.txt.jinja  browserconfig.xml  business.txt  contact.vcr.jinja  copyright.txt.jinja  humans copy.txt  humans.txt.jinja  manifest.webmanifest  pgp-key.txt.jinja  robots.txt  security copy.txt  site.webmanifest
src/swing-text/tests/: tests.py
src/swing-text/urls/: __init__.py  urls_texts.py
src/swing_text/data/: _social.json
src/swing_text/helpers/: __init__.py
src/swing_text/layouts/: earth.txt.jinja
src/swing_text/tests/: __init__.py
src/swing_text/views/: __init__.py  view_text.py
